feat: add hotels route
